Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8597

Autocomplete doesn't work on the next line after doxygen comment ending with dot

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 3.4.1
    • Qt Creator 2.6.0, Qt Creator 2.6.1
    • C/C++/Obj-C++ Support
    • None
    • Ubuntu 12.04, doesn't depend on DE.
    • cea5d886d8ab5bae7a8601d84222d3fa7d6541ef

      As the title says auto-complete stop exactly after doxygen comment line ending with a dot:

      /// text of the commentary.
      **on this line it doesn't work**
      

      Though it works for non-doxygen comment lines (2 slashes instead of 3) or even for doxygen comments that do not end with a dot:

      // Commentary.
      **fine**
      
      /// Commentary
      **also fine**
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kosjar Nikolai Kosjar
            greenscape Paul
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes